fix: layout issues on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,6 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-thumb {
-  border-radius: 3px;
   background-color: #FEE034;
 }
 
@@ -800,7 +799,11 @@ section {
 
 @media (width < 500px) {
   #features {
-    display: none;
+    display: none !important;
+  }
+
+  .features-section {
+    display: none !important;
   }
 }
 
@@ -864,23 +867,25 @@ section {
 }
 
 @media (width < 500px) {
-  #features-footer {
-    background: linear-gradient(rgba(255, 217, 0, 0), rgba(255, 237, 101, 0)), url("../img/info6-mobile.png");
-    background-size: cover;                  
-    background-repeat: no-repeat;  
-    padding: 60px 0 0 0;
-    overflow: hidden;
-  }  
+  .features-footer-img {
+    display: none;
+  }
 }
 
 @media (width > 500px) {
   #features-footer {
-    background: linear-gradient(rgba(255, 217, 0, 0), rgba(255, 237, 101, 0)), url("../img/info6.png");
-    background-size: cover;                  
-    background-repeat: no-repeat;  
-    padding: 60px 0 0 0;
-    overflow: hidden;
-  }  
+    width: 100%;
+    height: 650px;
+  }
+  
+  .features-footer-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
 }
 
 #features-footer .wrapper-info {
